// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineEndWidth renders 0 1`] = `
Array [
  .c0 {
  border-inline-end-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders function 1`] = `
Array [
  .c0 {
  border-inline-end-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders negative number 1`] = `
Array [
  .c0 {
  border-inline-end-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-inline-end-width: July;
  }
}

@media April {
  .c0 {
    border-inline-end-width: August;
  }
}

@media January {
  .c0 {
    border-inline-end-width: September;
  }
}

@media April {
  .c0 {
    border-inline-end-width: November;
  }
}

@media June {
  .c0 {
    border-inline-end-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-end-width: July;
  }
}

@media April {
  .c0 {
    border-inline-end-width: August;
  }
}

@media January {
  .c0 {
    border-inline-end-width: September;
  }
}

@media April {
  .c0 {
    border-inline-end-width: November;
  }
}

@media June {
  .c0 {
    border-inline-end-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-width: January;
  }
}

@media April {
  .c0 {
    border-inline-end-width: December;
  }
}

@media January {
  .c0 {
    border-inline-end-width: April;
  }
}

@media April {
  .c0 {
    border-inline-end-width: May;
  }
}

@media June {
  .c0 {
    border-inline-end-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-width: January;
  }
}

@media April {
  .c0 {
    border-inline-end-width: December;
  }
}

@media January {
  .c0 {
    border-inline-end-width: April;
  }
}

@media April {
  .c0 {
    border-inline-end-width: May;
  }
}

@media June {
  .c0 {
    border-inline-end-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-end-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders string 1`] = `
Array [
  .c0 {
  border-inline-end-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
